# valkyrie_mind

./: .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  docker-compose.yml  pyproject.toml  tox.ini
docs/: 2025-02-08 – Discussion and data points to work on.docx  Makefile  Odin Operating System and refinements.docx  conf.py  index.rst  installation.rst  make.bat  odin-system-architecture.mermaid  usage.rst
letta/: Dockerfile
llm/: Dockerfile
llm/scripts/: llm_startup.py
src/odin_mind/behavior/: goal_management.py  motor_control.py  output_generation.py
src/odin_mind/cognition/: cognitive_cycle.py  system_handlers.py  thought_processing.py  training_system.py
src/odin_mind/core/: intuition_subsystem.py  personality_subsystem.py  system_integration.py
src/odin_mind/emotion/: emotional_state_system.py  value_system.py
src/odin_mind/memory/: memory_types.py  perceptual_frame.py  valkyrie_graph.py
src/odin_mind/meta/: context_management.py  error_management.py  knowledge_base.py  mind_integration_system.py  security_layer.py  validation_system.py
src/odin_mind/perception/: gustatory_system.py  sensory_system.py
src/valkyrie_mind/behavior/: output_generation.py  self_monitoring.py
src/valkyrie_mind/cognition/: cognitive_state.py  system_interactions.py  system_optimization.py
src/valkyrie_mind/context/: base_context_manager.py  base_context_processor.py  context_manager.py  context_types.py
src/valkyrie_mind/context/processors/: emotional.py  situational.py  social.py
src/valkyrie_mind/core/: llm_integration.py  mind.py
src/valkyrie_mind/memory/: relationship_memory.py  valkyrie_graph.py
src/valkyrie_mind/meta/: ai_personality_core.py  context_management.py  knowledge_base.py  mind_integration_system.py
src/valkyrie_mind/perception/: auditory_system.py  olfactory_system.py  tactile_system.py  visual_system.py
src/valkyrie_mind/psyche/: emotion_manager.py  relationship_memory.py  value_system.py
tests/: __init__.py  simulate_cross_subsystem_flow.py  test_integration.py  test_memory_graph.py  test_odin_mind.py
ui/: Dockerfile  requirements.txt
ui/scripts/: gradio_app.py
