[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valkyrie_mind"
version = "0.1.0"
description = "Mario's Mind Project"
readme = "README.rst"
authors = [
  {name = "Mario Fialho", email = "mgf2007@gmail.com"}
]
maintainers = [
  {name = "Mario Fialho", email = "mgf2007@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

keywords = ["AI", "Consciousness", "Cognitive Architecture", "Valkyrie", "Digital Mind"]
license = {text = "MIT license"}
dependencies = [
  "typer"
]



[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Mario4272/valkyrie_mind/issues"
changelog = "https://github.com/Mario4272/valkyrie_mind/blob/main/HISTORY.rst"
homepage = "https://github.com/Mario4272/valkyrie_mind"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.coverage.run]
branch = true
source = ["valkyrie_mind"]

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]  # line length



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

