[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valkyrie_mind"
version = "0.1.0"
description = "Modular cognitive architecture for synthetic consciousness"
readme = "README.rst"
authors = [
  { name = "Mario Fialho", email = "mgf2007@gmail.com" }
]
maintainers = [
  { name = "Mario Fialho", email = "mgf2007@gmail.com" }
]
license = { text = "MIT license" }

dependencies = [
  "typer"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries"
]

keywords = ["AI", "Synthetic Consciousness", "Cognitive Architecture", "LLM", "Symbolic Reasoning"]

[project.optional-dependencies]
dev = [
  "coverage",     # testing
  "mypy",         # static typing
  "pytest",       # testing
  "ruff"          # linting
]

[project.urls]
bugs = "https://github.com/Mario4272/valkyrie_mind/issues"
changelog = "https://github.com/Mario4272/valkyrie_mind/blob/main/HISTORY.rst"
homepage = "https://github.com/Mario4272/valkyrie_mind"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"